# AVX-programming

./: CMakeLists.txt
simd/examples/: CMakeLists.txt
simd/examples/1d_convolution_avx/: CMakeLists.txt
simd/examples/1d_convolution_avx512/: CMakeLists.txt
simd/examples/2d_convolution_avx/: CMakeLists.txt
simd/examples/2d_convolution_avx512/: CMakeLists.txt
simd/examples/float_array_op_avx/: CMakeLists.txt
simd/examples/float_array_op_avx512/: CMakeLists.txt
simd/examples/float_matmul_4x4_avx/: CMakeLists.txt
simd/examples/float_matmul_4x4_avx512/: CMakeLists.txt
simd/examples/float_matrix_op_avx/: CMakeLists.txt
simd/examples/float_matrix_op_avx512/: CMakeLists.txt
simd/examples/gray_scale_image/: CMakeLists.txt
simd/examples/hello_avx/: CMakeLists.txt
simd/examples/hello_avx2/: CMakeLists.txt
simd/examples/hello_avx512/: CMakeLists.txt  main.cc
simd/examples/hello_sse/: CMakeLists.txt
simd/examples/saxpy/: CMakeLists.txt
simd/unit_test/: CMakeLists.txt  aligned_allocator_test.cc  api_test.cc  main.cc  sse_op_test.cc  sse_vec_test.cc  test_common.h  vec_complex_test.cc  vec_test.cc
simd/unit_test/avx/: CMakeLists.txt  arithmetic_test.cc  avx_vec_test.cc  check_arch.h  compare_test.cc  complex_test.cc  logical_test.cc  memory_test.cc
simd/unit_test/avx2/: CMakeLists.txt  arithmetic_test.cc  avx2_vec_test.cc  check_arch.h  compare_test.cc
simd/unit_test/avx512/: CMakeLists.txt  avx512f_vec_test.cc  check_arch.h
simd/unit_test/avx512f/: CMakeLists.txt  avx512f_vec_test.cc  check_arch.h
simd/unit_test/fma3_avx/: CMakeLists.txt  (+3 more)
(+145 files in other folders)
