cmake_minimum_required(VERSION 3.17)

add_subdirectory(hello_sse)
add_subdirectory(hello_avx)
add_subdirectory(hello_avx2)
add_subdirectory(hello_avx512)
add_subdirectory(saxpy)
add_subdirectory(1d_convolution_avx)
add_subdirectory(1d_convolution_avx512)
add_subdirectory(2d_convolution_avx)
add_subdirectory(2d_convolution_avx512)
add_subdirectory(float_array_op_avx)
add_subdirectory(float_array_op_avx512)
add_subdirectory(float_matmul_4x4_avx)
add_subdirectory(float_matmul_4x4_avx512)
add_subdirectory(float_matrix_op_avx)
add_subdirectory(float_matrix_op_avx512)
add_subdirectory(gray_scale_image)
